public/css/styles.css
/* COLORS
  #01BAEF - Light Blue
  #0CBABA - Seafoamish
  #380036 - Purple
  #26081C - Somehow even darker purple
  #150811 - Black
*/

body {
  background-color: #01BAEF;
  font-family: 'PT Sans', sans-serif;
}

.font-awesome-icon {
  font-family: FontAwesome;
  font-size: 1.2em;
}


/************** MAP **************/
#map-container {
  position: fixed;
  top: 20%;
  right: 2%;
}

#map {
  height: 500px;
  width: 500px;
  background-color: black;
  border: 1px solid goldenrod;
}

/************** END MAP **************/

/************** HEADER **************/
header {
  position: fixed;
  height: 80px;
  top: 0;
  background-color: #26081C;
  width: 100%;
  color: #0CBABA;
  z-index: 10;
}

header i, h1 {
  display: inline-block;
  margin-left: 2%;
}

header a {
  text-decoration: none;
  color: #0CBABA;
}

header h1 {
  font-family: 'Unica One', cursive;
  font-size: 3em;
}

header button {
  position: fixed;
  top: 29px;
  right: 2%;
  border-radius: 10px;
}

header h5{
  display: inline-block;
  /*text-align: center;*/
}

.post-link {
  position: fixed;
  top: 35px;
  right: 230px;
  border-bottom: 2px solid #01BAEF;
}

.users-link {
  position: fixed;
  top: 35px;
  right: 120px;
  border-bottom: 2px solid #01BAEF;
}
.profile-link {
  position: fixed;
  top: 35px;
  right: 170px;
  border-bottom: 2px solid #01BAEF;
}

.home-link{
  position: fixed;
  top: 35px;
  right: 340px;
  border-bottom: 2px solid #01BAEF;
}

/************** END MAP **************/
.container {
  margin: 100px auto;
  width: 95%;
}

.add-post {
  position: fixed;
  top: 85px;
  right: 2%;
  border: 1px solid black;
  z-index: 3;
}

.update-profile-container {
  display: none;
}

/************** GAME POSTS **************/

.post-games {
  max-width: 50%;
}



div.panel-heading * {
  display: inline-block;
}

div.update-post {
  display: none;
}

.map-location {
  display: inline-block;
}

a.update-posting{
  padding: 2%;
}

/************** END GAME POSTS **************/

/************** GAME INFO MODAL **************/

.game-info {
  background-color: rgba(0,0,0,0.4);
  height: 100%;
  width: 100%;
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
}

.modal-container {
  width: 70%;
  margin: 3% auto;
  height: 700px;
  overflow: auto;
}

.close-modal {
  text-align: right;
}

.close-modal:hover {
  cursor: pointer;
}

.game-details {
  display: none;
}


/************** END GAME INFO MODAL **************/



/**/

